...
        onDismissRequest = {},
        title = { Text(stringResource(res.titleRes)) },
        text = { Text(stringResource(res.messageRes)) },
        confirmButton = {
            TextButton(
                onClick = onClick,
                modifier = Modifier.testTag("login_blocking_error_action_button"),
            ) { Text(stringResource(res.actionLabelRes)) }
        },
        modifier = Modifier.testTag("login_blocking_error_dialog"),
    )
}

@Preview
@Composable
private fun LoginBlockingErrorDialogStorageFullPreview() {
...
